--- a/HikariNekoparaPatcher/Styles/BlurredDecorationWindow.xaml
+++ b/HikariNekoparaPatcher/Styles/BlurredDecorationWindow.xaml
@@ -105,6 +105,7 @@
                                         <controls:BlurredText DockPanel.Dock="Left" 
                                                               VerticalAlignment="Center"
                                                               Margin="8,0"
+                                                              FontFamily="{TemplateBinding FontFamily}"
                                                               Text="{TemplateBinding Title}" />
                                     </DockPanel>
                                 </Border>
